Fix home margin on mobile

--- a/components/home/home-content/home-navigation/HomeNavigation.module.scss
+++ b/components/home/home-content/home-navigation/HomeNavigation.module.scss
@@ -1,5 +1,7 @@
 .navigation {
   width: 600px;
+  margin-left: 15px;
+  margin-right: 15px;
 
   h1 {
     color: black;
